--- a/project/index.html
+++ b/project/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Purchify!</title>
 </head>
 <body>
-    
+    <div class="app-wrapp">
+        <div class="main">
+            <div class="navigate">
+                <a href=""><button class="button">Add</button></a>
+                <a href=""><button class="button">Contact</button></a>
+                <a href=""><button class="button">Cars</button></a>
+                <a href=""><button class="button">Bikes</button></a>
+                <a href=""><button class="button">Electronics</button></a>
+            </div>
+            <div class="title-main-app">
+
+            </div>
+            <div class="search">
+
+            </div>
+            <div class="objects">
+
+            </div>
+        </div>
+        <div class="contacts">
+
+        </div>
+    </div>
 </body>
 </html>
