--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Purchify!</title>
+    <style>
+        
+    </style>
 </head>
 <body>
     <div class="app-wrapp">
@@ -17,7 +20,7 @@
                 <a href=""><button class="button">Electronics</button></a>
             </div>
             <div class="title-main-app">
-
+                <h1 class="tiltle-purchify">Purchify!</h1>
             </div>
             <div class="search">
 
@@ -29,6 +32,10 @@
         <div class="contacts">
 
         </div>
+
     </div>
+    <script src=""></script>
+    <button class="button-to-top">To the top!</button>
+
 </body>
 </html>
