--- a/project/index.html
+++ b/project/index.html
@@ -35,7 +35,7 @@
 
     </div>
     <script src=""></script>
-    <button class="button-to-top">To the top!</button>
+    <button class="button-to-top" id="impButton">To the top!</button>
 
 </body>
 </html>
