--- a/project/index.html
+++ b/project/index.html
@@ -20,10 +20,13 @@
                 <a href=""><button class="button">Electronics</button></a>
             </div>
             <div class="title-main-app">
-                <h1 class="tiltle-purchify">Purchify!</h1>
+                <h1 class="tiltle-purchify" >Purchify!</h1>
+                <div><p class="paragraph">Do you need a site that can present the best deals when it comes to cars,bikes and electronics
+                    .Well search no more because you have found it!
+                </p></div>
             </div>
             <div class="search">
-
+                <input type="text" placeholder="Search.." class="search1" id="searchBar">
             </div>
             <div class="objects">
 
