to-top-button in process

--- a/project/index.html
+++ b/project/index.html
@@ -35,10 +35,11 @@
         <div class="contacts">
 
         </div>
-
+        <div class="right">
+            <button class="button-to-top" id="impButton">To the top!</button>
+        </div>
     </div>
-    <script src=""></script>
-    <button class="button-to-top" id="impButton">To the top!</button>
-
+    <script src="./buttonTop.js"></script>
+    <script src="./searchBar.js"></script>
 </body>
 </html>
