--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -17,20 +17,18 @@
             background-color: white;
         }
         
-        /* Stilizare link-uri din navbar */
         .navbar a {
-            float: left; /* Alinierea link-urilor la stânga */
-            display: block; /* Elementele să fie afișate ca blocuri */
-            color:black; /* Culoarea textului */
-            text-align: center; /* Alinierea textului în centru */
-            padding: 14px 16px; /* Spatierea între link-uri */
-            text-decoration: none; /* Eliminarea sublinierii */
+            float: left;
+            display: block; 
+            color:black; 
+            text-align: center; 
+            padding: 14px 16px;
+            text-decoration: none; 
         }
         
-        /* Stilizare link-uri la hover */
         .navbar a:hover {
-            background-color: beige; /* Culoare de fundal la hover */
-            color: black; /* Schimbarea culorii textului la hover */
+            background-color: beige; 
+            color: black;
         }
     </style>
 </head>
