--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -30,6 +30,14 @@
             background-color: beige; 
             color: black;
         }
+        .title{
+            color: black;
+            
+            margin-right: 50%;
+            margin-left: 400px;
+            font-size: 40px;
+            margin-top: 80px;
+        }
     </style>
 </head>
 <body>
@@ -39,7 +47,9 @@
             <a href="./afterhome/login.html">LogIn</a>
         </div>
         <div class="bodywrap">
-
+            <div class="title">
+                <h1>TMdiscovery</h1>
+            </div>
         </div>
     </div>
 </body>
