new structure of the home page

--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -38,6 +38,31 @@
             font-size: 40px;
             margin-top: 80px;
         }
+        #upbutton{
+            position: fixed;
+            display: none;
+            border-radius: 50px;
+            font-weight: bold;
+            color: white;
+            background-color: red;
+            width: 120px;
+            height: 45px;
+            margin-right:auto;
+            margin-left: 50px;  
+            left: 80%;
+        }
+        .introduction{
+            
+        }
+        .firstp{
+
+        }
+        .secondp{
+
+        }
+        .thirdp{
+
+        }
     </style>
 </head>
 <body>
@@ -50,6 +75,33 @@
             <div class="title">
                 <h1>TMdiscovery</h1>
             </div>
+            <div class="introduction">
+                <p>Introducing TMdiscovery: Your Gateway to Unraveling Market Trends!</p>
+            </div>
+            <div class="firstp">
+                <p>Welcome to TMdiscovery, where we're committed to deciphering the latest 
+                    trends and market dynamics that shape industries. Whether you're an 
+                    entrepreneur, a seasoned business owner, or a trend enthusiast, our 
+                    platform equips you with in-depth analyses, real-time data, and 
+                    actionable insights to navigate today's fast-paced market landscape.</p>
+            </div>
+            <div class="secondp">
+                <p>
+                    Explore our user-friendly interface to delve into trending topics, emerging markets, consumer behaviors,
+                     and innovative strategies. Our dedicated team of analysts scours diverse 
+                    sources to deliver the most pertinent and reliable information directly to you.
+                </p>
+            </div>
+            <div class="thirdp">
+                <p>Join our community of trendsetters and decision-makers, 
+                    and harness the power of foresight to propel your business forward.</p>
+            </div>
+            <footer class="contact">
+                <div>
+
+                </div>
+            </footer>
+            <button id="upbutton">Click to go up!</button>
         </div>
     </div>
 </body>
