--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -52,16 +52,41 @@
             left: 80%;
         }
         .introduction{
-            
+            margin-left: 100px;
+            margin-right: 100px;
+            font-size: 30px;
+            margin-top: 100px;
+            font-weight: bold;
         }
         .firstp{
-
+            margin-left: 100px;
+            margin-right: 100px;
+            font-size: 30px;
+            margin-top: 53px;
+            font-weight: bold;
         }
         .secondp{
-
+            margin-left: 100px;
+            margin-right: 50px;
+            font-size: 30px;
+            margin-top: 133px;
+            font-weight: bold;
         }
         .thirdp{
-
+            margin-left: 50px;
+            margin-right: 200px;
+            font-size: 30px;
+            margin-top: 133px;
+            font-weight: bold;
+        }
+        .division{
+            display: flex;
+        }
+        #imguserfriendly{
+            border-radius: 50%;
+            padding-left: 90px;
+            padding-right: 80px;
+            margin-top: 80px;
         }
     </style>
 </head>
@@ -85,12 +110,15 @@
                     platform equips you with in-depth analyses, real-time data, and 
                     actionable insights to navigate today's fast-paced market landscape.</p>
             </div>
-            <div class="secondp">
-                <p>
-                    Explore our user-friendly interface to delve into trending topics, emerging markets, consumer behaviors,
-                     and innovative strategies. Our dedicated team of analysts scours diverse 
-                    sources to deliver the most pertinent and reliable information directly to you.
-                </p>
+            <div class="division">
+                <div class="secondp">
+                    <p>
+                        Explore our user-friendly interface to delve into trending topics, emerging markets, consumer behaviors,
+                         and innovative strategies. Our dedicated team of analysts scours diverse 
+                        sources to deliver the most pertinent and reliable information directly to you.
+                    </p>
+                </div>
+                <img src="./extra/user.png" id="imguserfriendly">
             </div>
             <div class="thirdp">
                 <p>Join our community of trendsetters and decision-makers, 
