--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -6,7 +6,7 @@
     <title>TMsearc</title>
     <style>
         .navbar {
-            background-color: white; /* Culoarea de fundal */
+            background-color: rgb(238, 238, 238); /* Culoarea de fundal */
             overflow: hidden; /* Ascunderea oricăror elemente care ies în afara navbar-ului */
             padding-left: 900px;
             margin-right: 0;
@@ -14,7 +14,7 @@
             font-family: cursive;
         }
         body{
-            background-color: white;
+            background-color: rgb(238, 238, 238);
         }
         
         .navbar a {
@@ -27,7 +27,7 @@
         }
         
         .navbar a:hover {
-            background-color: beige; 
+            background-color: rgb(255, 244, 244); 
             color: black;
         }
         .title{
@@ -75,7 +75,7 @@
         .thirdp{
             margin-left: 50px;
             margin-right: 200px;
-            font-size: 30px;
+            font-size: 20px;
             margin-top: 133px;
             font-weight: bold;
         }
@@ -87,6 +87,9 @@
             padding-left: 90px;
             padding-right: 80px;
             margin-top: 80px;
+        }
+        .contact{
+            background-color: white;
         }
     </style>
 </head>
@@ -125,7 +128,16 @@
                     and harness the power of foresight to propel your business forward.</p>
             </div>
             <footer class="contact">
-                <div>
+                <div class="titlec">
+
+                </div>
+                <div class="instagram">
+
+                </div>
+                <div class="linkedin">
+
+                </div>
+                <div class="email">
 
                 </div>
             </footer>
