--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -8,7 +8,7 @@
         .navbar {
             background-color: rgb(238, 238, 238); /* Culoarea de fundal */
             overflow: hidden; /* Ascunderea oricăror elemente care ies în afara navbar-ului */
-            padding-left: 900px;
+            padding-left: 1000px;
             margin-right: 0;
             text-align: left;
             font-family: cursive;
@@ -127,18 +127,28 @@
                 <p>Join our community of trendsetters and decision-makers, 
                     and harness the power of foresight to propel your business forward.</p>
             </div>
-            <footer class="contact">
-                <div class="titlec">
+            <footer class="footer">
+                <div class="footer-container">
+                    <div class="footer-newsletter">
+                        <h1 class="footer-newsletter_header">...</h1>
+                        <div class="footer-newsletter_form">
+                            <input type="email" name="email" placeholder="example@gmail.com"/>
+                            <button type="submit" class="submit-btn">Subscribe</button>
+                        </div>
+                    </div>
+                    <div class="footer-body">
+                        <div class="footer-body_content"><p>...</p></div>
+                        <nav class="footer-body_nav">
+                            <ul class="footer-body_nav-list">
+                                <li class="footer-body_nav-item">
+                                    Services
+                                    <ul class="">
 
-                </div>
-                <div class="instagram">
-
-                </div>
-                <div class="linkedin">
-
-                </div>
-                <div class="email">
-
+                                    </ul>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </footer>
             <button id="upbutton">Click to go up!</button>
