--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -129,28 +129,81 @@
             </div>
             <footer class="footer">
                 <div class="footer-container">
-                    <div class="footer-newsletter">
-                        <h1 class="footer-newsletter_header">...</h1>
-                        <div class="footer-newsletter_form">
-                            <input type="email" name="email" placeholder="example@gmail.com"/>
-                            <button type="submit" class="submit-btn">Subscribe</button>
-                        </div>
+                  <div class="footer-newsletter">
+                    <h1 class="footer-newsletter__header">
+                      Want us to email you with the latest blockbuster news?
+                    </h1>
+                    <div class="footer-newsletter__form">
+                      <input type="email" name="email" placeholder="example@xyz.com"/>
+                      <button type="submit" class="submit-btn">Subscribe</button>
                     </div>
-                    <div class="footer-body">
-                        <div class="footer-body_content"><p>...</p></div>
-                        <nav class="footer-body_nav">
-                            <ul class="footer-body_nav-list">
-                                <li class="footer-body_nav-item">
-                                    Services
-                                    <ul class="">
-
-                                    </ul>
-                                </li>
-                            </ul>
-                        </nav>
+                  </div>
+                  <div class="footer-body">
+                    <div class="footer-body__content">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+                        esse illo culpa aperiam minima odit? Nihil quod illo pariatur
+                        libero.
+                      </p>
                     </div>
+                    <nav class="footer-body__nav">
+                      <ul class="footer-body__nav-list">
+                        <li class="footer-body__nav-item">
+                          Services
+                          <ul class="footer-body__nav-sublist">
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">Algorithm</a>
+                            </li>
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">Programing languages</a>
+                            </li>
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">App Development</a>
+                            </li>
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">Web development</a>
+                            </li>
+                          </ul>
+                        </li>
+                        <li class="footer-body__nav-item">
+                          About
+                          <ul class="footer-body__nav-sublist">
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">About</a>
+                            </li>
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">Careers</a>
+                            </li>
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">History</a>
+                            </li>
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">Our Team</a>
+                            </li>
+                          </ul>
+                        </li>
+                        <li class="footer-body__nav-item">
+                          Support
+                          <ul class="footer-body__nav-sublist">
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">FAQs</a>
+                            </li>
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">Contact</a>
+                            </li>
+                            <li class="footer-body__nav-subitem">
+                              <a href="" class="footer-body__nav-link">Live chat</a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </nav>
+                  </div>
+                  <div class="footer-attribute">
+                      <p>&copy; Company 2024. All right reserved.</p>
+                  </div>
                 </div>
-            </footer>
+              </footer>
             <button id="upbutton">Click to go up!</button>
         </div>
     </div>
