--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -92,6 +92,7 @@
             background-color: white;
         }
     </style>
+    <link rel="stylesheet" href="./stylefooter.css">
 </head>
 <body>
     <div class="appwrap">
