--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -72,13 +72,6 @@
             margin-top: 133px;
             font-weight: bold;
         }
-        .thirdp{
-            margin-left: 50px;
-            margin-right: 200px;
-            font-size: 20px;
-            margin-top: 133px;
-            font-weight: bold;
-        }
         .division{
             display: flex;
         }
@@ -124,10 +117,6 @@
                 </div>
                 <img src="./extra/user.png" id="imguserfriendly">
             </div>
-            <div class="thirdp">
-                <p>Join our community of trendsetters and decision-makers, 
-                    and harness the power of foresight to propel your business forward.</p>
-            </div>
             <footer class="footer">
                 <div class="footer-container">
                   <div class="footer-newsletter">
@@ -142,9 +131,8 @@
                   <div class="footer-body">
                     <div class="footer-body__content">
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
-                        esse illo culpa aperiam minima odit? Nihil quod illo pariatur
-                        libero.
+                        Join our community of trendsetters and decision-makers, 
+                    and harness the power of foresight to propel your business forward.
                       </p>
                     </div>
                     <nav class="footer-body__nav">
