--- a/TM-site/index.html
+++ b/TM-site/index.html
@@ -40,8 +40,8 @@
         }
         #upbutton{
             position: fixed;
-            display: none;
             border-radius: 50px;
+            display: none;
             font-weight: bold;
             color: white;
             background-color: red;
@@ -117,6 +117,7 @@
                 </div>
                 <img src="./extra/user.png" id="imguserfriendly">
             </div>
+            <button id="upbutton">Click to go up!</button>
             <footer class="footer">
                 <div class="footer-container">
                   <div class="footer-newsletter">
@@ -193,8 +194,9 @@
                   </div>
                 </div>
               </footer>
-            <button id="upbutton">Click to go up!</button>
+            
         </div>
     </div>
+    <script src="buttonup.js"></script>
 </body>
 </html>
