--- a/TM-site/afterhome/signup.html
+++ b/TM-site/afterhome/signup.html
@@ -6,6 +6,13 @@
     <title>TMsearc</title>
 </head>
 <body>
-    
+    <div class="appwrap">
+        <div class="signup">
+            <div class="title">
+                <h1>SignUp</h1>
+            </div>
+            <form action="signup"></form>
+        </div>
+    </div>
 </body>
 </html>
