--- a/TM-site/afterhome/signup.html
+++ b/TM-site/afterhome/signup.html
@@ -11,7 +11,9 @@
             <div class="title">
                 <h1>SignUp</h1>
             </div>
-            <form action="signup"></form>
+            <form action="signup">
+                
+            </form>
         </div>
     </div>
 </body>
